# Nudny-Silnik

./: CMakeLists.txt
include/: config.hpp  silnik.hpp
include/core/: app.hpp  input.hpp
include/core/impl/glfw3/: app.hpp  input.hpp
include/core/impl/sdl3/: app.hpp  input.hpp
include/core/impl/sfml3/: app.hpp  input.hpp
include/graph/: drawable.hpp  interfaces.hpp  rectangle_data.hpp  renderer.hpp
include/graph/impl/glfw3/: rectangle.hpp
include/graph/impl/sfml3/: rectangle.hpp  renderer.hpp
include/util/: callback_queue.hpp  eqopter.hpp  singleton.hpp
share/glad/include/glad/: glad.h
share/glad/src/: glad.c
src/: config.cpp
src/core/: app.cpp  input.cpp
src/core/impl/glfw3/: app.cpp  input.cpp
src/core/impl/sdl3/: app.cpp  input.cpp
src/core/impl/sfml3/: app.cpp  input.cpp
src/graph/: drawable.cpp
src/graph/impl/sfml3/: renderer.cpp
